--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
 		></script>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"></script>
+
 	<script src="./js/youtube.js"></script>
 	<script src="./js/app.ui.js"></script>
 	<script src="./js/app.js"></script>
