--- a/index.html
+++ b/index.html
@@ -107,24 +107,28 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- Buy Me A Coffee Button!-->
-		<script
-			data-name="BMC-Widget"
-			data-cfasync="false"
-			src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-			data-id="harrytom"
-			data-description="Support me on Buy me a coffee!"
-			data-message=""
-			data-color="#BD5FFF"
-			data-position="Right"
-			data-x_margin="18"
-			data-y_margin="18"
-		></script>
 	</body>
+
+	<!-- Buy Me A Coffee Button!-->
+	<script
+		data-name="BMC-Widget"
+		data-cfasync="false"
+		src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+		data-id="harrytom"
+		data-description="Support me on Buy me a coffee!"
+		data-message=""
+		data-color="#BD5FFF"
+		data-position="Right"
+		data-x_margin="18"
+		data-y_margin="18"
+	></script>
+
+	<!-- External CDNs -->
+	<script async src="https://cdn.splitbee.io/sb.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"></script>
 
+	<!-- App Scripts -->
 	<script src="./js/youtube.js"></script>
 	<script src="./js/app.ui.js"></script>
 	<script src="./js/app.js"></script>
